@@ -43,6 +43,7 @@
   * Make lsp-headerline--check-breadcrumb public
   * Added Odin langauge server support [[https://github.com/DanielGavin/ols][ols]]
   * Fix bug in lsp-odin where ~f-join~ collapses double slashes. Using ~format~ instead.
+  * Fix missing gopls inlay hints when ~lsp-use-plist~ is true
 
 ** 9.0.0
   * Add language server config for QML (Qt Modeling Language) using qmlls.
